<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutMain"
    android:orientation="vertical"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/tvMain"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20dp"
      android:layout_marginTop="12dp"
      android:text="Prueba Espresso"
      android:contentDescription="@string/elemento_textview"
      android:hint="texto hint"
      android:layout_gravity="center"/>

  <EditText
      android:id="@+id/edtMain"
      android:layout_width="match_parent"
      android:layout_margin="12dp"
      android:layout_height="wrap_content"
      android:hint="@string/hint_age"/>

  <Button
      android:id="@+id/btnMain"
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="CLICK"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_margin="16dp"
      android:background="@color/design_default_color_secondary">

    <TextView
        android:id="@+id/tvTestOne"
        android:text="@string/app_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvTestTwo"
        android:text="@string/app_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        />
  </LinearLayout>

  <Button
    android:id="@+id/btnClick"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:text="Login Activity"
      android:layout_marginLeft="16dp"
    />

  <Button
      android:id="@+id/btnGoToRV"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:text="RV Activity"
      android:layout_marginLeft="16dp"
      />

  <Button
      android:id="@+id/btnGoToSpinner"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:text="Spinner Activity"
      android:layout_marginLeft="16dp"
      />


</LinearLayout>